# torchspace

./: README.md  pyproject.toml
examples/: 1to3_decay_example.py
examples/rambo/: rambo_example.py
madspace/: cuts.py  twoparticle.py
tests/: diag.py  test_blocks.ipynb  test_inverse.py  test_learnable.py  test_lepton.py  test_rambo.ipynb  test_rootfinder.ipynb  test_rotxxx.ipynb
torchspace/: __init__.py  base.py  chili.py  diagram_mapping.py  exceptions.py  invariants.py  luminosity.py  rambo.py  single_channel.py  spline_mapping.py  threeparticle.py
torchspace/functional/: kinematics.py  propagators.py  ps_utils.py  splines.py  tchannel.py
torchspace/rootfinder/: autograd.py  methods.py  rambo_functions.py  roots.py
