[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "torchspace"
version = "1.0.0"
authors = [
  { name="Ramon Winterhalder", email="ramon.winterhalder@unimi.it" },
  { name="Theo Heimel", email="theo.heimel@uclouvain.be" },
]
description = "Differentiable and GPU ready phase-space mappings"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "scipy",
  "pandas",
  "tables",
  "torchtestcase",
]

[project.optional-dependencies]
vegas = ["vegas"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
atomic = true
line_length = 88

[project.urls]
Homepage = "https://github.com/madgraph-ml/torchspace"
Issues = "https://github.com/madgraph-ml/torchspace/issues"